--- a/tango_with_django_project/static/css/new.css
+++ b/tango_with_django_project/static/css/new.css
@@ -1,19 +1,20 @@
 @import url('new.css');
-.circular {
-	width: 300px;
-	height: 300px;
+.circular_big {
+	margin:auto auto;
+	position:relative;
+	float:left;
+	width: 160px;
+	height: 160px;
 	border-radius: 150px;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
-	background: url('/static/111.jpg') no-repeat;
-	background-size:cover;
 	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 	}
 .circularuser {
-	width: 300px;
-	height: 300px;
+	width: 160px;
+	height: 160px;
 	border-radius: 150px;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
