--- a/tango_with_django_project/templates/asha/about.html
+++ b/tango_with_django_project/templates/asha/about.html
@@ -13,9 +13,12 @@
     Surely there is much work to be done on site to make it as a library of useful links. Thanks for visiting.<br>
     I have a blog here <a href="www.pythoninteractive.blogspot.in">Interactive Python</a> where  ocassionaly write about python for novice programmers.
     <br>
-    For getting connected 
+    For getting connected
   </p>
 
 </div>
-<div class="circular"></div>
+<div class="span9">
+<div class="circular_big"style="background: url('/static/111.jpg') no-repeat;
+	background-size:cover;"></div><div class="span6"><div><a href="https://plus.google.com/+rajanchauhandiscover"><span>On Google<span></a><div></div>
+</div>
 {% endblock %}
