--- a/tango_with_django_project/templates/asha/base.html
+++ b/tango_with_django_project/templates/asha/base.html
@@ -4,8 +4,8 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!-- Bootstrap -->
-   <script src="{% static "/js/jquery.js" %}"></script>
-<script src="{% static "/js/asha-ajax.js" %}"></script>
+   <script src="{% static 'js/jquery.js' %}"></script>
+<script src="{% static 'js/asha-ajax.js' %}"></script>
    <link href="{% static 'css/bootstrap-fluid-adj.css' %}" rel="stylesheet">
    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
    <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
@@ -53,7 +53,7 @@ padding: 9px 0;
         </ul>
           <ul class="nav">
                  {% if user.is_authenticated %}
-                  <li><a href="/asha/restricted/">Restricted</a></li>
+                  <!--<li><a href="/asha/restricted/">Restricted</a></li>
                   <li><a href="/asha/add_category/">Add Category</a></li>
                  {% endif %}
                  <li><a href="/asha/about/">About</a></li>
@@ -68,25 +68,35 @@ padding: 9px 0;
          <div class="row-fluid">
 
              <div class="span3">
-               <div class="span9"><ul class="nav nav-list">
+               <!--<div class="span9"><ul class="nav nav-list">
                     <li class="nav-header">Find a Category</li>
                     <form>
                     <label></label>
                     <li><input  class="search-query span10" type="text" name="suggestion" value="" id="suggestion" /></li>
                     </form>
             </ul>
-            {% if cat_list %}
-            <div id="cats">
-            {% include 'asha/category_list.html' with cat_list=cat_list %}
-            </div>
+            {% if categories %}
+            <h1>Categories </h1>
+
+                <ul>
+                    {% for category in categories %}
+                     Following line changed to add an HTML hyperlink
+                    <li><a href="/asha/category/{{ category.url }}">{{ category.name }}</a></li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>There are no categories present.</strong>
             {% endif %}
-          </div>
+          </div>-->
+
                  <div class="well sidebar-nav">
+                   {% if not otherpages %}
                    {% if not topcategories%}
                    {% include "asha/category_list.html" %}
                    {% endif %}
-                 </div>
 
+                  {% endif %}
+                 </div>
                  <!--/.well -->
              </div>
              <!--/span-->
@@ -107,7 +117,7 @@ padding: 9px 0;
         <p>&copy; Asha 2013</p>
     </div>
 </footer>
-        <script src="{% static 'js/jquery-2.0.3.min.js' %}"></script>
+        <script src="{% static 'js/jquery-2.2.0.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     </body>
