--- a/tango_with_django_project/templates/asha/search.html
+++ b/tango_with_django_project/templates/asha/search.html
@@ -1,7 +1,7 @@
 {% extends "asha/base.html" %}
 
 {% load static %}
-
+<link href="{% static 'css/new2.css' %}" rel="stylesheet">
 {% block title %}Search{% endblock %}
 
 {% block body_block %}
@@ -9,28 +9,6 @@
     <h1>Search with Asha</h1>
     <br/>
 
-    <div class="container-fluid">
-        <form class="form-signin span8" id="user_form" method="post" action="/asha/search/">
-            {% csrf_token %}
-            <!-- Display the search form elements here -->
-            <input type="text" size="50" name="query" value="" id="query" />
-            <input class="btn btn-primary" type="submit" name="submit" value="Search" />
-            <br />
-        </form>
 
-        {% if result_list %}
-        <!-- Display search results in an ordered list -->
-        <div style="clear: both;">
-            <ol>
-            {% for result in result_list %}
-                <li>
-                    <strong><a href="{{ result.link }}">{{ result.title }}</a></strong><br />
-                    <em>{{ result.summary }}</em>
-                </li>
-            {% endfor %}
-            </ol>
-        </div>
-        {% endif %}
-    </div>
 </div>
 {% endblock %}
